@@ -1,6 +1,10 @@
 Changes from jTDS 0.8
 =========================
 
+07/07/2004 - Brian Heineman
+ o Added test for bug [974036] Bug in 0.8rc1 DatabaseMetaData method
+   getTableTypes()
+
 07/01/2004 - Brian Heineman
  o Improved Blob and Clob support.  Writes done through a Blob or Clob are now
    buffered in memory if the data size is less than 32KB.  If the data size is
